~suggestions focus indication fix, gap adjustment

--- a/react/src/Components/AnimePage/SuggestionTabs.module.scss
+++ b/react/src/Components/AnimePage/SuggestionTabs.module.scss
@@ -6,7 +6,10 @@
   color: var(--primary-a75);
   border: 2px solid var(--primary-a12p5);
   overflow: hidden;
-
+  
+  &:has(.tab:focus-visible) {
+    border-color: var(--primary);
+  }
 
   .tab {
     font-size: 1.125rem;
@@ -54,8 +57,8 @@
 .titles {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-
+  gap: 0.75rem;
+  
   & > span + span {
     color: var(--primary-a75)
   }
